# s2-plugin-loader

./: .gitignore  CMakeLists.txt
src/: dispatch.h  dllmain.cpp  payload.cpp  payload.h
src/proxy/: no_proxy.cpp  winmm.cpp
